<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:layout_centerInParent="true"
    tools:context=".login.LogIn">

    <TextView
        android:id="@+id/bouncing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_from_login"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="290dp"
        android:layout_height="440dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/curve"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bouncing_text"
        app:layout_constraintVertical_bias="0.22">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_outlinebox_name"
            style="@style/MyTextInputLayout"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_outlinebox"
            style="@style/MyTextInputLayout"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_edt_outlinebox"
            style="@style/MyTextInputLayout"
            android:layout_width="260dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/edt_outlinebox_confirm"-->
<!--            style="@style/MyTextInputLayout"-->
<!--            android:layout_width="260dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:hint= "@string/enter_your_confirm_passwords">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edt_confirm_login"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:textColor="@color/black"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <Button
            android:id="@+id/confirm_button"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/grey"
            android:text="@string/confrim"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/to_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/register_here"
            android:textColor="#222020"
            android:textColorHighlight="@color/light_blue"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout"
        app:layout_constraintVertical_bias="0.209" />

    <ImageButton
        android:id="@+id/remember_img_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/circular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_layout"
        app:layout_constraintVertical_bias="0.205" />

</androidx.constraintlayout.widget.ConstraintLayout>